--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@ center: {lat: 40.563857,  lng: -79.764128},
 mapTypeId: google.maps.MapTypeId.ROADMAP
 });
 var locationss = [
-   {Address: " 213 Catalpa Streetreet ", Type : " Residential ", Owner: " Paul and Beverly Rodriguez ", Notes: "  ", lat:  40.571923 , lng: -79.763848 },
+{Address: " 324 10th Street ", Type : " Residential ", Owner: " Michael & Theodore Saganis ", Notes: "  ", lat:  40.566579 , lng: -79.767095 },
+{Address: " 405 10th Street ", Type : " Residential ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.566814 , lng: -79.766453 },
+{Address: " 411 10th Street Block 6 ", Type : " Commercial ", Owner: " David L Renwick Sr. ", Notes: "  ", lat:  40.566792 , lng: -79.766392 },
+{Address: " 415 10th Street ", Type : " Commercial ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.566765 , lng: -79.766341 },
+{Address: " 1032 4th Ave ", Type : " Commercial ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.567228 , lng: -79.766657 },
+{Address: " 733 5th Ave ", Type : " Commercial ", Owner: " Ed & Maria Dorsey  ", Notes: " Rear house to be demolished by owners when they have the money  ", lat:  40.563447 , lng: -79.765187 },
+{Address: " 213 Catalpa Streetreet ", Type : " Residential ", Owner: " Paul and Beverly Rodriguez ", Notes: "  ", lat:  40.571923 , lng: -79.763848 },
 {Address: " 637 5th Avenue ", Type : " Residential ", Owner: " Robert and Elizabeth Schneider ", Notes: "  ", lat:  40.562095 , lng: -79.764594 },
 {Address: " 213 Locust Street ", Type : " Residential ", Owner: " Herbert Houser ", Notes: "  ", lat:  40.570069 , lng: -79.763407 },
 {Address: " 502 Locust Street ", Type : " Residential ", Owner: " Gary Reith ", Notes: "  ", lat:  40.570158 , lng: -79.75851 },
@@ -38,7 +44,7 @@ var locationss = [
 {Address: " 1310 Woodmont Avenue ", Type : " Residential ", Owner: " Shawn Burtner ", Notes: "  ", lat:  40.572594 , lng: -79.760872 },
 {Address: " 1001-1009 5th Avenue ", Type : " Commercial ", Owner: " Anthony Csizmadia ", Notes: "  ", lat:  40.566969 , lng: -79.765771 },
 {Address: " 412 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.56663 , lng: -79.766276 },
-{Address: "  10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.566638 , lng: -79.766421 },
+{Address: " 404 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.566638 , lng: -79.766421 },
 {Address: " 908 5th Avenue ", Type : " Residential ", Owner: " Daniel Taggart ", Notes: "  ", lat:  40.565717 , lng: -79.764743 },
 {Address: " 524 4th Avenue ", Type : " Residential ", Owner: " John and Lauralee Ray ", Notes: "  ", lat:  40.559748 , lng: -79.764736 },
 {Address: " 1153 Forest Avenue ", Type : " Residential ", Owner: " Irene Dunkel ", Notes: "  ", lat:  40.56379 , lng: -79.750141 },
@@ -66,8 +72,7 @@ var locationss = [
 {Address: " 1331 Victoria Avenue ", Type : " Residential ", Owner: " Landon Martinkovich ", Notes: "  ", lat:  40.572974 , lng: -79.762415 },
 {Address: " 1334 Woodmont Avenue ", Type : " Residential ", Owner: " Arthur Bash ", Notes: "  ", lat:  40.573399 , lng: -79.761045 },
 {Address: " 631 Kimball Avenue ", Type : " Residential ", Owner: " Jacqueline Touray ", Notes: "  ", lat:  40.573642 , lng: -79.757239 },
-{Address: " 359 Main Street ", Type : " Residential ", Owner: " City of New Ken ", Notes: "  ", lat:  40.556808 , lng: -79.76138 },
-{Address: " 826 7th Street ", Type : " Residential ", Owner: " Donna Golden ", Notes: "  ", lat:  40.563115 , lng: -79.759817 }
+{Address: " 359 Main Streetreet ", Type : " Residential ", Owner: " City of New Ken ", Notes: "  ", lat:  40.556808 , lng: -79.76138 },
 ];
 //I ended up replacing the array from the document provided to the class with my own so I could include content as well, for the infowindow.
 var infowindow = new google.maps.InfoWindow;
