--- a/index.html
+++ b/index.html
@@ -21,34 +21,12 @@ center: {lat: 40.563857,  lng: -79.764128},
 mapTypeId: google.maps.MapTypeId.ROADMAP
 });
 var locationss = [
-{Address: " 324 10th Street ", Type : " Residential ", Owner: " Michael & Theodore Saganis ", Notes: "  ", lat:  40.566579 , lng: -79.767095 },
-{Address: " 405 10th Street ", Type : " Residential ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.566814 , lng: -79.766453 },
-{Address: " 411 10th Street Block 6 ", Type : " Commercial ", Owner: " David L Renwick Sr. ", Notes: "  ", lat:  40.566792 , lng: -79.766392 },
-{Address: " 415 10th Street ", Type : " Commercial ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.566765 , lng: -79.766341 },
-{Address: " 1032 4th Ave ", Type : " Commercial ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.567228 , lng: -79.766657 },
-{Address: " 733 5th Ave ", Type : " Commercial ", Owner: " Ed & Maria Dorsey  ", Notes: " Rear house to be demolished by owners when they have the money  ", lat:  40.563447 , lng: -79.765187 },
-{Address: " 213 Catalpa Streetreet ", Type : " Residential ", Owner: " Paul and Beverly Rodriguez ", Notes: "  ", lat:  40.571923 , lng: -79.763848 },
 {Address: " 637 5th Avenue ", Type : " Residential ", Owner: " Robert and Elizabeth Schneider ", Notes: "  ", lat:  40.562095 , lng: -79.764594 },
-{Address: " 213 Locust Street ", Type : " Residential ", Owner: " Herbert Houser ", Notes: "  ", lat:  40.570069 , lng: -79.763407 },
-{Address: " 502 Locust Street ", Type : " Residential ", Owner: " Gary Reith ", Notes: "  ", lat:  40.570158 , lng: -79.75851 },
-{Address: " 224-1/2 Ridge Avenue ", Type : " Residential ", Owner: " Tim and Judith Degnan ", Notes: "  ", lat:  40.565702 , lng: -79.761901 },
-{Address: " 509 Ridge Avenue ", Type : " Residential ", Owner: " Real Estate Options ", Notes: " Rear ", lat:  40.57095 , lng: -79.759159 },
-{Address: " 216-1/2 Ridge Avenue ", Type : " Residential ", Owner: " B & D Estates ", Notes: "  ", lat:  40.565375 , lng: -79.761747 },
-{Address: " 415 7th Street Ext ", Type : " Commercial ", Owner: " Todd and Claudia Helper ", Notes: " Rear ", lat:  40.562901 , lng: -79.739652 },
-{Address: " 1301 Taylor Avenue ", Type : " Residential ", Owner: " Ryan Houser ", Notes: "  ", lat:  40.572467 , lng: -79.759972 },
-{Address: " 1306 Taylor Avenue ", Type : " Residential ", Owner: " Entrust Mid South LLC ", Notes: "  ", lat:  40.572733 , lng: -79.759671 },
-{Address: " 1309 Taylor Avenue ", Type : " Residential ", Owner: " Dennis Lavery Etal ", Notes: "  ", lat:  40.57268 , lng: -79.760098 },
-{Address: " 615 Walnut Street ", Type : " Residential ", Owner: " Joshua Micenko ", Notes: "  ", lat:  40.568033 , lng: -79.763812 },
-{Address: " 1123 Woodmont Avenue ", Type : " Residential ", Owner: " Linda Wilson ", Notes: "  ", lat:  40.569797 , lng: -79.760524 },
-{Address: " 1305 Woodmont Avenue ", Type : " Residential ", Owner: " Commonwealth Investments ", Notes: "  ", lat:  40.572429 , lng: -79.761181 },
-{Address: " 1310 Woodmont Avenue ", Type : " Residential ", Owner: " Shawn Burtner ", Notes: "  ", lat:  40.572594 , lng: -79.760872 },
 {Address: " 1001-1009 5th Avenue ", Type : " Commercial ", Owner: " Anthony Csizmadia ", Notes: "  ", lat:  40.566969 , lng: -79.765771 },
 {Address: " 412 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.56663 , lng: -79.766276 },
 {Address: " 404 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.566638 , lng: -79.766421 },
 {Address: " 908 5th Avenue ", Type : " Residential ", Owner: " Daniel Taggart ", Notes: "  ", lat:  40.565717 , lng: -79.764743 },
 {Address: " 524 4th Avenue ", Type : " Residential ", Owner: " John and Lauralee Ray ", Notes: "  ", lat:  40.559748 , lng: -79.764736 },
-{Address: " 1153 Forest Avenue ", Type : " Residential ", Owner: " Irene Dunkel ", Notes: "  ", lat:  40.56379 , lng: -79.750141 },
-{Address: " 1145 Forest ", Type : " Residential ", Owner: " Anthony and Diana Battaglia ", Notes: "  ", lat:  40.563705 , lng: -79.750827 },
 {Address: " 826 7th Street ", Type : " Residential ", Owner: " Donna Golden ", Notes: "  ", lat:  40.56309 , lng: -79.759829 },
 {Address: " 449 4th Avenue ", Type : " Residential ", Owner: " Timothy Gorencic ", Notes: "  ", lat:  40.558043 , lng: -79.764755 },
 {Address: " 343 4th Avenue ", Type : " Residential ", Owner: " Allan and Alan Wilson ", Notes: "  ", lat:  40.55593 , lng: -79.764227 },
@@ -58,21 +36,18 @@ var locationss = [
 {Address: " 538 3rd Avenue ", Type : " Residential ", Owner: " Troy and Lisa Hills ", Notes: "  ", lat:  40.559696 , lng: -79.765916 },
 {Address: " 546-548 3rd Avenue ", Type : " Residential ", Owner: " Verner & Associates ", Notes: "  ", lat:  40.559931 , lng: -79.765989 },
 {Address: " 513 Linden Avenue ", Type : " Residential ", Owner: " Frank and Sophia Brzinski ", Notes: "  ", lat:  40.559392 , lng: -79.761528 },
-{Address: " 1315 Kenneth Avenue ", Type : " Residential ", Owner: " Kristie Macioce ", Notes: " Garage Only ", lat:  40.572239 , lng: -79.764826 },
 {Address: " 845 Franklin Street ", Type : " Residential ", Owner: " Leonard and Angela Pierce ", Notes: "  ", lat:  40.561736 , lng: -79.758878 },
 {Address: " 642 Linden Avenue ", Type : " Residential ", Owner: " Heidi Lukomski ", Notes: "  ", lat:  40.561981 , lng: -79.757628 },
 {Address: " 1207 Victoria Avenue ", Type : " Residential ", Owner: " Timothy and Sarah Skoog ", Notes: "  ", lat:  40.570456 , lng: -79.761801 },
 {Address: " 723 North Street ", Type : " Residential ", Owner: " Kenneth and Vikki Goodrich ", Notes: "  ", lat:  40.574584 , lng: -79.758662 },
-{Address: " 1024 Kenneth Avenue ", Type : " Residential ", Owner: " Eugene Adams ", Notes: " Front and Rear ", lat:  40.567634 , lng: -79.762832 },
 {Address: " 523 Earl Avenue ", Type : " Residential ", Owner: " Richard Gray ", Notes: "  ", lat:  40.587474 , lng: -79.758567 },
 {Address: " 525 Earl Avenue ", Type : " Residential ", Owner: " Bryan Gieger ", Notes: "  ", lat:  40.58753 , lng: -79.758405 },
-{Address: " 800 East Hill Drive ", Type : " Commercial ", Owner: " Terrace Inn ", Notes: "  ", lat:  40.567285 , lng: -79.735955 },
-{Address: " 1251 Kenneth Avenue ", Type : " Residential ", Owner: " Home Opportunity LLC ", Notes: "  ", lat:  40.571277 , lng: -79.764278 },
-{Address: " 556 Ridge Avenue ", Type : " Residential ", Owner: " Roy & Patricia Mikesell ", Notes: "  ", lat:  40.571666 , lng: -79.757786 },
-{Address: " 1331 Victoria Avenue ", Type : " Residential ", Owner: " Landon Martinkovich ", Notes: "  ", lat:  40.572974 , lng: -79.762415 },
-{Address: " 1334 Woodmont Avenue ", Type : " Residential ", Owner: " Arthur Bash ", Notes: "  ", lat:  40.573399 , lng: -79.761045 },
-{Address: " 631 Kimball Avenue ", Type : " Residential ", Owner: " Jacqueline Touray ", Notes: "  ", lat:  40.573642 , lng: -79.757239 },
-{Address: " 359 Main Streetreet ", Type : " Residential ", Owner: " City of New Ken ", Notes: "  ", lat:  40.556808 , lng: -79.76138 },
+{Address: " 359 Main Street ", Type : " Residential ", Owner: " City of New Ken ", Notes: "  ", lat:  40.556808 , lng: -79.76138 },
+{Address: " 9th St and 3rd Ave ", Type : " Commercial ", Owner: " City Of New Kensington ", Notes: "  ", lat:  40.565189 , lng: -79.767836 },
+{Address: " 405 10th Street ", Type : " Residential ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.566814 , lng: -79.766453 },
+{Address: " 411 10th Street Block 6 ", Type : " Commercial ", Owner: " David L Renwick Sr. ", Notes: "  ", lat:  40.566792 , lng: -79.766392 },
+{Address: " 415 10th Street ", Type : " Commercial ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.566765 , lng: -79.766341 },
+{Address: " 733 5th Ave ", Type : " Commercial ", Owner: " Ed & Maria Dorsey  ", Notes: " Rear house to be demolished by owners when they have the money  ", lat:  40.563447 , lng: -79.765187 }
 ];
 //I ended up replacing the array from the document provided to the class with my own so I could include content as well, for the infowindow.
 var infowindow = new google.maps.InfoWindow;
