--- a/index.html
+++ b/index.html
@@ -21,33 +21,19 @@ center: {lat: 40.563857,  lng: -79.764128},
 mapTypeId: google.maps.MapTypeId.ROADMAP
 });
 var locationss = [
-{Address: " 637 5th Avenue ", Type : " Residential ", Owner: " Robert and Elizabeth Schneider ", Notes: "  ", lat:  40.562095 , lng: -79.764594 },
-{Address: " 1001-1009 5th Avenue ", Type : " Commercial ", Owner: " Anthony Csizmadia ", Notes: "  ", lat:  40.566969 , lng: -79.765771 },
-{Address: " 412 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.56663 , lng: -79.766276 },
-{Address: " 404 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.566638 , lng: -79.766421 },
-{Address: " 908 5th Avenue ", Type : " Residential ", Owner: " Daniel Taggart ", Notes: "  ", lat:  40.565717 , lng: -79.764743 },
-{Address: " 524 4th Avenue ", Type : " Residential ", Owner: " John and Lauralee Ray ", Notes: "  ", lat:  40.559748 , lng: -79.764736 },
-{Address: " 826 7th Street ", Type : " Residential ", Owner: " Donna Golden ", Notes: "  ", lat:  40.56309 , lng: -79.759829 },
-{Address: " 449 4th Avenue ", Type : " Residential ", Owner: " Timothy Gorencic ", Notes: "  ", lat:  40.558043 , lng: -79.764755 },
-{Address: " 343 4th Avenue ", Type : " Residential ", Owner: " Allan and Alan Wilson ", Notes: "  ", lat:  40.55593 , lng: -79.764227 },
-{Address: " 206 5th Avenue ", Type : " Residential ", Owner: " Karen Kelly ", Notes: "  ", lat:  40.553497 , lng: -79.762134 },
-{Address: " 208 5th Avenue ", Type : " Residential ", Owner: " Lisa Love ", Notes: "  ", lat:  40.553568 , lng: -79.762149 },
-{Address: " 522 3rd Avenue ", Type : " Residential ", Owner: " Clara Powell ", Notes: "  ", lat:  40.559301 , lng: -79.765797 },
-{Address: " 538 3rd Avenue ", Type : " Residential ", Owner: " Troy and Lisa Hills ", Notes: "  ", lat:  40.559696 , lng: -79.765916 },
-{Address: " 546-548 3rd Avenue ", Type : " Residential ", Owner: " Verner & Associates ", Notes: "  ", lat:  40.559931 , lng: -79.765989 },
-{Address: " 513 Linden Avenue ", Type : " Residential ", Owner: " Frank and Sophia Brzinski ", Notes: "  ", lat:  40.559392 , lng: -79.761528 },
-{Address: " 845 Franklin Street ", Type : " Residential ", Owner: " Leonard and Angela Pierce ", Notes: "  ", lat:  40.561736 , lng: -79.758878 },
-{Address: " 642 Linden Avenue ", Type : " Residential ", Owner: " Heidi Lukomski ", Notes: "  ", lat:  40.561981 , lng: -79.757628 },
-{Address: " 1207 Victoria Avenue ", Type : " Residential ", Owner: " Timothy and Sarah Skoog ", Notes: "  ", lat:  40.570456 , lng: -79.761801 },
-{Address: " 723 North Street ", Type : " Residential ", Owner: " Kenneth and Vikki Goodrich ", Notes: "  ", lat:  40.574584 , lng: -79.758662 },
-{Address: " 523 Earl Avenue ", Type : " Residential ", Owner: " Richard Gray ", Notes: "  ", lat:  40.587474 , lng: -79.758567 },
-{Address: " 525 Earl Avenue ", Type : " Residential ", Owner: " Bryan Gieger ", Notes: "  ", lat:  40.58753 , lng: -79.758405 },
-{Address: " 359 Main Street ", Type : " Residential ", Owner: " City of New Ken ", Notes: "  ", lat:  40.556808 , lng: -79.76138 },
-{Address: " 9th St and 3rd Ave ", Type : " Commercial ", Owner: " City Of New Kensington ", Notes: "  ", lat:  40.565189 , lng: -79.767836 },
-{Address: " 405 10th Street ", Type : " Residential ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.566814 , lng: -79.766453 },
-{Address: " 411 10th Street Block 6 ", Type : " Commercial ", Owner: " David L Renwick Sr. ", Notes: "  ", lat:  40.566792 , lng: -79.766392 },
-{Address: " 415 10th Street ", Type : " Commercial ", Owner: " Westmoreland County ", Notes: "  ", lat:  40.566765 , lng: -79.766341 },
-{Address: " 733 5th Ave ", Type : " Commercial ", Owner: " Ed & Maria Dorsey  ", Notes: " Rear house to be demolished by owners when they have the money  ", lat:  40.563447 , lng: -79.765187 }
+{Address: "  637  5th Avenue  ", Type : "  Residential  ", Owner: "  Robert and Elizabeth Schneider  ", Notes: "    ", lat:   40.562095  , lng:  -79.764594  },
+{Address: "  1001-1009  5th Avenue  ", Type : "  Commercial  ", Owner: "  Anthony Csizmadia  ", Notes: "    ", lat:   40.566969  , lng:  -79.765771  },
+{Address: "  412  10th Street  ", Type : "  Commercial  ", Owner: "  Vincent O'Hara  ", Notes: "    ", lat:   40.56663  , lng:  -79.766276  },
+{Address: "  404  10th Street  ", Type : "  Commercial  ", Owner: "  Vincent O'Hara  ", Notes: "    ", lat:   40.566638  , lng:  -79.766421  },
+{Address: "  908  5th Avenue  ", Type : "  Residential  ", Owner: "  Daniel Taggart  ", Notes: "    ", lat:   40.565717  , lng:  -79.764743  },
+{Address: "  449  4th Avenue  ", Type : "  Residential  ", Owner: "  Timothy Gorencic  ", Notes: "    ", lat:   40.558043  , lng:  -79.764755  },
+{Address: "  405 10th Street  ", Type : "  Residential  ", Owner: "  Westmoreland County  ", Notes: "    ", lat:   40.566801  , lng:  -79.766461  },
+{Address: "  411 10th Street Block 6  ", Type : "  Commercial  ", Owner: "  David L Renwick Sr.  ", Notes: "    ", lat:   40.566838  , lng:  -79.766383  },
+{Address: "  417-419 10th Street  ", Type : "  Residential  ", Owner: "  City of New Kensington  ", Notes: "    ", lat:   40.566846  , lng:  -79.766238  },
+{Address: "  415 10th Street  ", Type : "  Commercial  ", Owner: "  Westmoreland County  ", Notes: "    ", lat:   40.566862  , lng:  -79.766314  },
+{Address: "  1032 4th Ave  ", Type : "  Commercial  ", Owner: "  Westmoreland County  ", Notes: "    ", lat:   40.567228  , lng:  -79.766657  },
+{Address: "  733 5th Ave  ", Type : "  Commercial  ", Owner: "  Ed & Maria Dorsey   ", Notes: "  Rear house to be demolished by owners when they have the money   ", lat:   40.563447  , lng:  -79.765187  },
+{Address: "  324 10th Street  ", Type : "  Residential  ", Owner: "  Michael & Theodore Saganis  ", Notes: "    ", lat:   40.566579  , lng:  -79.767095  }
 ];
 //I ended up replacing the array from the document provided to the class with my own so I could include content as well, for the infowindow.
 var infowindow = new google.maps.InfoWindow;
