--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ var corridor = new google.maps.Polyline({
    geodesic: true,
    strokeColor: '#FF0000',
    strokeOpacity: .5,
-   strokeWeight: 2
+   strokeWeight: 2,
+   title: "Corridor of Innovation"
 });
 var infowindow = new google.maps.InfoWindow;
 var marker, i;
