--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@ infowindow.open(map, marker);
 })(marker, i));
 }
 google.maps.event.addListener(corridor, 'mouseover', function() {
-    polylineWindow.open(map, corridor);
-    polylineWindow.setContent("The Corridor of Innovation");
+   var pwContent = "<div style = 'width:200px;min-height:40px'><h3>Corridor of Innovation</h3></div>"
+   polylineWindow.setContent(pwContent);
+   polylineWindow.open(map, corridor);
 });
 google.maps.event.addListener(corridor, 'mouseout', function() {
     polylineWindow.close();
