--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@ infowindow.open(map, marker);
 }
 })(marker, i));
 }
-google.maps.event.addListener(corridor, 'mouseover', function() {
-   var pwContent = "<div style = 'width:200px;min-height:40px'><h3>Corridor of Innovation</h3></div>"
+google.maps.event.addListener(corridor, 'mouseover', function(e) {
+   var pwContent = "<div style = 'width:200px;min-height:20px'><h3>Corridor of Innovation</h3></div>"
+   polylineWindow.setPosition(e.LatLng);
    polylineWindow.setContent(pwContent);
    polylineWindow.open(map, corridor);
 });
