--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ infowindow.open(map, marker);
 }
 google.maps.event.addListener(corridor, 'mouseover', function(e) {
    var pwContent = "<div style = 'width:200px;min-height:20px'><h3>Corridor of Innovation</h3></div>"
-   polylineWindow.setPosition(e.LatLng);
+   polylineWindow.setPosition(corridor);
    polylineWindow.setContent(pwContent);
    polylineWindow.open(map, corridor);
 });
