--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@ infowindow.open(map, marker);
 })(marker, i));
 }
 google.maps.event.addListener(corridor, 'mouseover', function(e) {
+   var loc = [{lat:40.566855, lng-79.765599 }];
    var pwContent = "<div style = 'width:200px;min-height:20px'><h3>Corridor of Innovation</h3></div>"
-   polylineWindow.setPosition(corridor);
+   polylineWindow.setPosition(loc);
    polylineWindow.setContent(pwContent);
    polylineWindow.open(map, corridor);
 });
