--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ infowindow.open(map, marker);
 })(marker, i));
 }
 google.maps.event.addListener(corridor, 'mouseover', function(e) {
-   var loc = [{lat:40.566855, lng-79.765599 }];
+   var loc = [{lat:40.566855, lng-79.765599 }]
    var pwContent = "<div style = 'width:200px;min-height:20px'><h3>Corridor of Innovation</h3></div>"
    polylineWindow.setPosition(loc);
    polylineWindow.setContent(pwContent);
