--- a/index.html
+++ b/index.html
@@ -72,11 +72,17 @@ infowindow.open(map, marker);
 })(marker, i));
 }
 google.maps.event.addListener(corridor, 'mouseover', function(e) {
-   var loc = [{lat:40.566855, lng:-79.765599 }];
    var pwContent = "<div style = 'width:200px;min-height:20px'><h3>Corridor of Innovation</h3></div>";
-   polylineWindow.setPosition(loc);
-   polylineWindow.setContent(pwContent);
-   polylineWindow.open(map, corridor);
+   //polylineWindow.setContent(pwContent);
+   //polylineWindow.open(map, corridor);
+   el = document.getElementById('pwcontent').parentNode.parentNode.parentNode;
+    el.firstChild.setAttribute('class', 'closeInfoWindow');
+    el.firstChild.setAttribute('title', 'Close Info Window');
+    el = el.previousElementSibling || el.previousSibling;
+    el.setAttribute('class', 'infoWindowBackground');
+    for (i = 0; i < 11; i = i + 1) {
+        el = el.previousElementSibling || el.previousSibling;
+        el.style.display = 'none';
 });
 google.maps.event.addListener(corridor, 'mouseout', function() {
     polylineWindow.close();
