--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ infowindow.open(map, marker);
 google.maps.event.addListener(corridor, 'mouseover', function(e) {
    var pwContent = "<div style = 'width:200px;min-height:20px'><h3>Corridor of Innovation</h3></div>";
    polylineWindow.setContent(pwContent);
-   polylineWindow.open(map,corridorCoordinates);
+   polylineWindow.open(map,corridor);
 });
 google.maps.event.addListener(corridor, 'mouseout', function() {
     polylineWindow.close();
