--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ var corridor = new google.maps.Polyline({
    strokeWeight: 4,
    title: "Corridor of Innovation"
 });
-var polylineWindow = ew google.maps.InfoWindow;
+var polylineWindow = new google.maps.InfoWindow;
 var infowindow = new google.maps.InfoWindow;
 var marker, i;
 for(var i=0; i<locationss.length; i++){
