--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ zoom: 16,
 center: {lat: 40.565411, lng: -79.765182},
 //The map is centered at the Berkey Creamery's coordinates, all markers are not immediately in view, but most of them are.
 mapTypeId: google.maps.MapTypeId.ROADMAP,
-styles [
+styles: [
     {
         "featureType": "administrative",
         "elementType": "labels.text.fill",
