--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@ center: {lat: 40.565411, lng: -79.765182},
 //The map is centered at the Berkey Creamery's coordinates, all markers are not immediately in view, but most of them are.
 mapTypeId: google.maps.MapTypeId.ROADMAP,
 styles: [
-    {
+   {
+            featureType: 'administrative.land_parcel',
+            elementType: 'labels.text.fill',
+            stylers: [{color: '#bdbdbd'}]
+          },
+   {
         "featureType": "administrative",
         "elementType": "labels.text.fill",
         "stylers": [
