--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@ center: {lat: 40.565411, lng: -79.765182},
 mapTypeId: google.maps.MapTypeId.ROADMAP,
 //Style source Xavier Fourcrier https://snazzymaps.com/style/25/blue-water
 styles: [
+   [
+    {
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "hue": "#ff4400"
+            },
+            {
+                "saturation": -68
+            },
+            {
+                "lightness": -4
+            },
+            {
+                "gamma": 0.72
+            }
+        ]
+    },
    {
             featureType: 'administrative.land_parcel',
             elementType: 'labels.text.fill',
