--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@ styles: [
         ]
     },
    {
+        "featureType": "landscape.man_made",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "hue": "#0077ff"
+            },
+            {
+                "gamma": 3.1
+            }
+        ]
+    },
+   {
             featureType: 'administrative.land_parcel',
             elementType: 'labels.text.fill',
             stylers: [{color: '#bdbdbd'}]
