--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ styles: [
         "elementType": "geometry",
         "stylers": [
             {
-                "hue": "#0077ff"
+                "hue": "#939393"
             },
             {
                 "gamma": 3.1
