--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ styles: [
         "elementType": "all",
         "stylers": [
             {
-                "visibility": "on"
+                "visibility": "off"
             }
         ]
     },
