--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>New Kensington Proposed Demolition Map </title>
 <style>
 #map {
-height: 600px;
+height: 570px;
 width: 100%;
 }
 </style>
@@ -130,16 +130,16 @@ styles: [
 });
 //array for markers
 var locationss = [
-{Address: "  1001-1009  5th Avenue  ", Type : "  Commercial  ", Owner: "  Anthony Csizmadia  ", Notes: "    ", lat:   40.566969  , lng:  -79.765771  },
-{Address: " 412 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.56663 , lng: -79.766276 },
-{Address: " 404 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "  ", lat:  40.566612 , lng: -79.766404 },
-{Address: " 908 5th Avenue ", Type : " Residential ", Owner: " Daniel Taggart ", Notes: "  ", lat:  40.565683 , lng: -79.765087 },
-{Address: "  405 10th Street  ", Type : "  Residential  ", Owner: "  Westmoreland County  ", Notes: "    ", lat:   40.566801  , lng:  -79.766461  },
-{Address: "  411 10th Street Block 6  ", Type : "  Commercial  ", Owner: "  David L Renwick Sr.  ", Notes: "    ", lat:   40.566838  , lng:  -79.766383  },
-{Address: "  417-419 10th Street  ", Type : "  Residential  ", Owner: "  City of New Kensington  ", Notes: "    ", lat:   40.566846  , lng:  -79.766238  },
-{Address: "  415 10th Street  ", Type : "  Commercial  ", Owner: "  Westmoreland County  ", Notes: "    ", lat:   40.566862  , lng:  -79.766314  },
-{Address: "  733 5th Ave  ", Type : "  Commercial  ", Owner: "  Ed & Maria Dorsey   ", Notes: "  Rear house to be demolished when they have the money Maria Dorsey said.  ", lat:   40.563447  , lng:  -79.765187  },
-{Address: "  324 10th Street  ", Type : "  Residential  ", Owner: "  Michael & Theodore Saganis  ", Notes: "    ", lat:   40.566460, lng:  -79.767046   }
+{Address: "  1001-1009  5th Avenue  ", Type : "  Commercial  ", Owner: "  Anthony Csizmadia  ", Notes: "City expressed interest in demolishing the building in 2016, but it was never approved for demolition.", lat:   40.566969  , lng:  -79.765771  },
+{Address: " 412 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "City expressed interest in demolishing the building in 2016, but it was never approved for demolition.", lat:  40.56663 , lng: -79.766276 },
+{Address: " 404 10th Street ", Type : " Commercial ", Owner: " Vincent O'Hara ", Notes: "City expressed interest in demolishing the building in 2016, but it was never approved for demolition.", lat:  40.566612 , lng: -79.766404 },
+{Address: " 908 5th Avenue ", Type : " Residential ", Owner: " Daniel Taggart ", Notes: "City expressed interest in demolishing the building in 2016, but it was never approved for demolition.", lat:  40.565683 , lng: -79.765087 },
+{Address: "  405 10th Street  ", Type : "  Residential  ", Owner: "  Westmoreland County  ", Notes: "To be demolished.", lat:   40.566801  , lng:  -79.766461  },
+{Address: "  411 10th Street Block 6  ", Type : "  Commercial  ", Owner: "  David L Renwick Sr.  ", Notes: "To be demolished.", lat:   40.566838  , lng:  -79.766383  },
+{Address: "  417-419 10th Street  ", Type : "  Residential  ", Owner: "  City of New Kensington  ", Notes: "To be demolished.", lat:   40.566846  , lng:  -79.766238  },
+{Address: "  415 10th Street  ", Type : "  Commercial  ", Owner: "  Westmoreland County  ", Notes: "To be demolished.", lat:   40.566862  , lng:  -79.766314  },
+{Address: "  733 5th Ave  ", Type : "  Commercial  ", Owner: "  Ed & Maria Dorsey   ", Notes: "Rear house to be demolished when they have the money Maria Dorsey said.  ", lat:   40.563447  , lng:  -79.765187  },
+{Address: "  324 10th Street  ", Type : "  Residential  ", Owner: "  Michael & Theodore Saganis  ", Notes: "  ", lat:   40.566460, lng:  -79.767046   }
 ];
 //array for polyline
 var corridorCoordinates = [
